Fix Modal Title Overlapping Close Button

--- a/styles/modal.css
+++ b/styles/modal.css
@@ -51,16 +51,15 @@
 
 .modal__close {
   margin:0;
-  position: absolute;
   right: 20px;
   transform: translate(0,-1px);
+  white-space: nowrap;
 }
 
 .modal__close i {
   font-size: 18px;
   margin-right: 8px;
   opacity: 0.7;
-  white-space: nowrap;
 }
 
 .modal__content {
